# peters

./: Makefile  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 04eb65c85acd_auto.py  103d193e1f8d_auto.py  14cee5fc4460_title_models.py  54220127a862_auto.py  740f1e94dfe9_title_models.py  7b8bb73d355a_initial_revision.py  887527be877d_auto.py  a5ed06e6cf8d_auto.py  bd937a7186c1_auto.py
app/: config.py  db.py  models.py
templates/: index.html
